# lemon-chat

./: LICENSE  README.md  base.h  build.sh  client.html  client_without_audio.html  main.c  roadmap
ITH-sha/: sha256.c  sha256.h
buildresult/: readme.txt
clib/: clib_memory.c  clib_memory.h  clib_string.c  clib_string.h
client/: client.html
dave-g-json/: cJSON.c  cJSON.h
kokke-tiny-aes-c/: aes.c  aes.h
server/: Cargo.toml
server-source-code/: linux_build_script.sh  windows_build_script.bat  windows_clean_buildfiles_script.bat  windows_count_files_script.bat
server-source-code/libdatachannel/: .ninja_deps  .ninja_log  CMakeLists.txt  LibDataChannelConfig.cmake  LibDataChannelConfigVersion.cmake  LibJuiceConfig.cmake  LibJuiceConfigVersion.cmake  build.ninja  cmake_install.cmake  libdatachannel.so.0.23
server-source-code/libmaxminddb-1.12.2/: .ninja_deps  .ninja_log  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  config.h  config.status  libtool
server-source-code/libmaxminddb-1.12.2/include/: maxminddb.h  maxminddb_config.h
server-source-code/libmaxminddb-1.12.2/src/: ._maxminddb.c  Makefile  libmaxminddb.pc  maxminddb.c
server-source-code/libmaxminddb-1.12.2/src/.deps/: data-pool.Plo  maxminddb.Plo
server-source-code/libmaxminddb-1.12.2/t/: Makefile
server-source-code/libmaxminddb-1.12.2/t/.deps/: maxminddb_test_helper.Plo
server-source-code/libtom/: CMakeLists.txt
server-source-code/libtom/libtomcrypt/src/headers/: tomcrypt_math.h
server-source-code/libtom/libtomcrypt/src/math/: ltm_desc.c  ltm_desc.h  tfm_desc.c
server-source-code/libtom/libtomcrypt/src/pk/rsa/: rsa_exptmod.c
server-source-code/libtom/libtommath/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  build.ninja.tmp87fa3  cmake_install.cmake  libtommath-config-version.cmake  libtommath-config.cmake  tommath.h
server-source-code/libtom/libtommath/pre_gen/: mpi.c
server-source-code/libviolet/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  cmake_install.cmake
server-source-code/libviolet/src/: options.c  options.h  utils.h
server-source-code/main/: .clang-format  CMakeLists.txt  audio_channel.c  audio_channel.h  base.h  client_message.c  client_message.h  ip_tools.c  ip_tools.h  main.c  memory_manager.c  memory_manager.h  mytypedef.h  server_message.c  server_message.h  unix_start_template  windows_clangformat_script.bat
server-source-code/main/ITH-sha/: sha256.c  sha256.h
server-source-code/main/clib/: clib_memory.c  clib_memory.h  clib_string.c  clib_string.h
server-source-code/main/dave-g-json/: cJSON.c  cJSON.h
server-source-code/main/eteran-cvector/utest/: utest.h
server-source-code/main/kokke-tiny-aes-c/: aes.c  aes.h
server-source-code/main/libtom/: ltm_desc.h  tomcrypt.h  tomcrypt_argchk.h  tomcrypt_cfg.h  tomcrypt_cipher.h  tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_macros.h  tomcrypt_math.h  tomcrypt_misc.h  tomcrypt_pk.h  tomcrypt_pkcs.h  tomcrypt_private.h  tomcrypt_prng.h  tommath.h  tommath_c89.h  tommath_class.h  tommath_cutoffs.h  tommath_private.hs  tommath_superclass.h
server-source-code/main/log/: log.c  log.h
server-source-code/main/vec/: vec.c  vec.h
server-source-code/main/violet/src/: options.h  utils.h
server-source-code/main/zhicheng/: base64.c  base64.h
server-source-code/mbedtls-3.5.1/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja
server-source-code/mbedtls-3.5.1/cmake/: MbedTLSConfigVersion.cmake  MbedTLSTargets.cmake
server-source-code/mbedtls-3.5.1/include/mbedtls/: mbedtls_config.h
server-source-code/theldus-websocket/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  cmake_install.cmake
server-source-code/theldus-websocket/include/: base64.h  ws.h
server-source-code/theldus-websocket/src/: base64.c  handshake.c  sha1.c  utf8.c  ws.c
server/src/: audio_channel.rs  main.rs  stun_server.rs
theldus-websocket/: base64.c  handshake.c  ws.c  ws.h
tools-for-building/: readme.txt
zhicheng/: base64.c  base64.h
